backend/parser/alphacompiler_parser.go
// Code generated from AlphaCompiler.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // AlphaCompiler

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AlphaCompilerParser struct {
	*antlr.BaseParser
}

var AlphaCompilerParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func alphacompilerParserInit() {
	staticData := &AlphaCompilerParserStaticData
	staticData.LiteralNames = []string{
		"", "'package'", "';'", "'var'", "'('", "')'", "'='", "'type'", "'func'",
		"','", "'['", "']'", "'struct'", "'{'", "'}'", "'+'", "'-'", "'!'",
		"'^'", "'*'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'&^'", "'|'", "'=='",
		"'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'.'", "'append'",
		"'len'", "'cap'", "'print'", "'println'", "'return'", "'break'", "'continue'",
		"'++'", "'--'", "':='", "'+='", "'&='", "'-='", "'|='", "'*='", "'^='",
		"'<<='", "'>>='", "'&^='", "'%='", "'/='", "'if'", "'else'", "'for'",
		"'switch'", "':'", "'case'", "'default'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "IDENTIFIER",
		"INTLITERAL", "FLOATLITERAL", "RUNELITERAL", "RAWSTRINGLITERAL", "INTERPRETEDSTRINGLITERAL",
		"WS", "COMMENT", "MULTILINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"root", "topDeclarationList", "variableDecl", "innerVarDecls", "singleVarDecl",
		"singleVarDeclNoExps", "typeDecl", "innerTypeDecls", "singleTypeDecl",
		"funcDecl", "funcFrontDecl", "funcArgDecls", "declType", "sliceDeclType",
		"arrayDeclType", "structDeclType", "structMemDecls", "identifierList",
		"expression", "expressionList", "primaryExpression", "operand", "literal",
		"index", "arguments", "selector", "appendExpression", "lengthExpression",
		"capExpression", "statementList", "block", "statement", "simpleStatement",
		"assignmentStatement", "ifStatement", "loop", "switch_stmt", "expressionCaseClauseList",
		"expressionCaseClause", "expressionSwitchCase",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AlphaCompilerParserInit initializes any static state used to implement AlphaCompilerParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAlphaCompilerParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AlphaCompilerParserInit() {
	staticData := &AlphaCompilerParserStaticData
	staticData.once.Do(alphacompilerParserInit)
}

// NewAlphaCompilerParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAlphaCompilerParser(input antlr.TokenStream) *AlphaCompilerParser {
	AlphaCompilerParserInit()
	this := new(AlphaCompilerParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &AlphaCompilerParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "AlphaCompiler.g4"

	return this
}

// AlphaCompilerParser tokens.
const (
	AlphaCompilerParserEOF                      = antlr.TokenEOF
	AlphaCompilerParserT__0                     = 1
	AlphaCompilerParserT__1                     = 2
	AlphaCompilerParserT__2                     = 3
	AlphaCompilerParserT__3                     = 4
	AlphaCompilerParserT__4                     = 5
	AlphaCompilerParserT__5                     = 6
	AlphaCompilerParserT__6                     = 7
	AlphaCompilerParserT__7                     = 8
	AlphaCompilerParserT__8                     = 9
	AlphaCompilerParserT__9                     = 10
	AlphaCompilerParserT__10                    = 11
	AlphaCompilerParserT__11                    = 12
	AlphaCompilerParserT__12                    = 13
	AlphaCompilerParserT__13                    = 14
	AlphaCompilerParserT__14                    = 15
	AlphaCompilerParserT__15                    = 16
	AlphaCompilerParserT__16                    = 17
	AlphaCompilerParserT__17                    = 18
	AlphaCompilerParserT__18                    = 19
	AlphaCompilerParserT__19                    = 20
	AlphaCompilerParserT__20                    = 21
	AlphaCompilerParserT__21                    = 22
	AlphaCompilerParserT__22                    = 23
	AlphaCompilerParserT__23                    = 24
	AlphaCompilerParserT__24                    = 25
	AlphaCompilerParserT__25                    = 26
	AlphaCompilerParserT__26                    = 27
	AlphaCompilerParserT__27                    = 28
	AlphaCompilerParserT__28                    = 29
	AlphaCompilerParserT__29                    = 30
	AlphaCompilerParserT__30                    = 31
	AlphaCompilerParserT__31                    = 32
	AlphaCompilerParserT__32                    = 33
	AlphaCompilerParserT__33                    = 34
	AlphaCompilerParserT__34                    = 35
	AlphaCompilerParserT__35                    = 36
	AlphaCompilerParserT__36                    = 37
	AlphaCompilerParserT__37                    = 38
	AlphaCompilerParserT__38                    = 39
	AlphaCompilerParserT__39                    = 40
	AlphaCompilerParserT__40                    = 41
	AlphaCompilerParserT__41                    = 42
	AlphaCompilerParserT__42                    = 43
	AlphaCompilerParserT__43                    = 44
	AlphaCompilerParserT__44                    = 45
	AlphaCompilerParserT__45                    = 46
	AlphaCompilerParserT__46                    = 47
	AlphaCompilerParserT__47                    = 48
	AlphaCompilerParserT__48                    = 49
	AlphaCompilerParserT__49                    = 50
	AlphaCompilerParserT__50                    = 51
	AlphaCompilerParserT__51                    = 52
	AlphaCompilerParserT__52                    = 53
	AlphaCompilerParserT__53                    = 54
	AlphaCompilerParserT__54                    = 55
	AlphaCompilerParserT__55                    = 56
	AlphaCompilerParserT__56                    = 57
	AlphaCompilerParserT__57                    = 58
	AlphaCompilerParserT__58                    = 59
	AlphaCompilerParserT__59                    = 60
	AlphaCompilerParserT__60                    = 61
	AlphaCompilerParserT__61                    = 62
	AlphaCompilerParserT__62                    = 63
	AlphaCompilerParserT__63                    = 64
	AlphaCompilerParserIDENTIFIER               = 65
	AlphaCompilerParserINTLITERAL               = 66
	AlphaCompilerParserFLOATLITERAL             = 67
	AlphaCompilerParserRUNELITERAL              = 68
	AlphaCompilerParserRAWSTRINGLITERAL         = 69
	AlphaCompilerParserINTERPRETEDSTRINGLITERAL = 70
	AlphaCompilerParserWS                       = 71
	AlphaCompilerParserCOMMENT                  = 72
	AlphaCompilerParserMULTILINE_COMMENT        = 73
)

// AlphaCompilerParser rules.
const (
	AlphaCompilerParserRULE_root                     = 0
	AlphaCompilerParserRULE_topDeclarationList       = 1
	AlphaCompilerParserRULE_variableDecl             = 2
	AlphaCompilerParserRULE_innerVarDecls            = 3
	AlphaCompilerParserRULE_singleVarDecl            = 4
	AlphaCompilerParserRULE_singleVarDeclNoExps      = 5
	AlphaCompilerParserRULE_typeDecl                 = 6
	AlphaCompilerParserRULE_innerTypeDecls           = 7
	AlphaCompilerParserRULE_singleTypeDecl           = 8
	AlphaCompilerParserRULE_funcDecl                 = 9
	AlphaCompilerParserRULE_funcFrontDecl            = 10
	AlphaCompilerParserRULE_funcArgDecls             = 11
	AlphaCompilerParserRULE_declType                 = 12
	AlphaCompilerParserRULE_sliceDeclType            = 13
	AlphaCompilerParserRULE_arrayDeclType            = 14
	AlphaCompilerParserRULE_structDeclType           = 15
	AlphaCompilerParserRULE_structMemDecls           = 16
	AlphaCompilerParserRULE_identifierList           = 17
	AlphaCompilerParserRULE_expression               = 18
	AlphaCompilerParserRULE_expressionList           = 19
	AlphaCompilerParserRULE_primaryExpression        = 20
	AlphaCompilerParserRULE_operand                  = 21
	AlphaCompilerParserRULE_literal                  = 22
	AlphaCompilerParserRULE_index                    = 23
	AlphaCompilerParserRULE_arguments                = 24
	AlphaCompilerParserRULE_selector                 = 25
	AlphaCompilerParserRULE_appendExpression         = 26
	AlphaCompilerParserRULE_lengthExpression         = 27
	AlphaCompilerParserRULE_capExpression            = 28
	AlphaCompilerParserRULE_statementList            = 29
	AlphaCompilerParserRULE_block                    = 30
	AlphaCompilerParserRULE_statement                = 31
	AlphaCompilerParserRULE_simpleStatement          = 32
	AlphaCompilerParserRULE_assignmentStatement      = 33
	AlphaCompilerParserRULE_ifStatement              = 34
	AlphaCompilerParserRULE_loop                     = 35
	AlphaCompilerParserRULE_switch_stmt              = 36
	AlphaCompilerParserRULE_expressionCaseClauseList = 37
	AlphaCompilerParserRULE_expressionCaseClause     = 38
	AlphaCompilerParserRULE_expressionSwitchCase     = 39
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IDENTIFIER() antlr.TerminalNode
	TopDeclarationList() ITopDeclarationListContext
	EOF() antlr.TerminalNode

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AlphaCompilerParserRULE_root
	return p
}

func InitEmptyRootContext(p *RootContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AlphaCompilerParserRULE_root
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlphaCompilerParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(AlphaCompilerParserIDENTIFIER, 0)
}

func (s *RootContext) TopDeclarationList() ITopDeclarationListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopDeclarationListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopDeclarationListContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(AlphaCompilerParserEOF, 0)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AlphaCompilerListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AlphaCompilerListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (s *RootContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AlphaCompilerVisitor:
		return t.VisitRoot(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AlphaCompilerParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AlphaCompilerParserRULE_root)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		p.Match(AlphaCompilerParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(81)
		p.Match(AlphaCompilerParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(82)
		p.Match(AlphaCompilerParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(83)
		p.TopDeclarationList()
	}
	{
		p.SetState(84)
		p.Match(AlphaCompilerParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITopDeclarationListContext is an interface to support dynamic dispatch.
type ITopDeclarationListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllVariableDecl() []IVariableDeclContext
	VariableDecl(i int) IVariableDeclContext
	AllTypeDecl() []ITypeDeclContext
	TypeDecl(i int) ITypeDeclContext
	AllFuncDecl() []IFuncDeclContext
	FuncDecl(i int) IFuncDeclContext

	// IsTopDeclarationListContext differentiates from other interfaces.
	IsTopDeclarationListContext()
}

type TopDeclarationListContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopDeclarationListContext() *TopDeclarationListContext {
	var p = new(TopDeclarationListContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AlphaCompilerParserRULE_topDeclarationList
	return p
}

func InitEmptyTopDeclarationListContext(p *TopDeclarationListContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AlphaCompilerParserRULE_topDeclarationList
}

func (*TopDeclarationListContext) IsTopDeclarationListContext() {}

func NewTopDeclarationListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopDeclarationListContext {
	var p = new(TopDeclarationListContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlphaCompilerParserRULE_topDeclarationList

	return p
}

func (s *TopDeclarationListContext) GetParser() antlr.Parser { return s.parser }

func (s *TopDeclarationListContext) AllVariableDecl() []IVariableDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariableDeclContext); ok {
			len++
		}
	}

	tst := make([]IVariableDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariableDeclContext); ok {
			tst[i] = t.(IVariableDeclContext)
			i++
		}
	}

	return tst
}

func (s *TopDeclarationListContext) VariableDecl(i int) IVariableDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableDeclContext)
}

func (s *TopDeclarationListContext) AllTypeDecl() []ITypeDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypeDeclContext); ok {
			len++
		}
	}

	tst := make([]ITypeDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypeDeclContext); ok {
			tst[i] = t.(ITypeDeclContext)
			i++
		}
	}

	return tst
}

func (s *TopDeclarationListContext) TypeDecl(i int) ITypeDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeDeclContext)
}

func (s *TopDeclarationListContext) AllFuncDecl() []IFuncDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFuncDeclContext); ok {
			len++
		}
	}

	tst := make([]IFuncDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFuncDeclContext); ok {
			tst[i] = t.(IFuncDeclContext)
			i++
		}
	}

	return tst
}

func (s *TopDeclarationListContext) FuncDecl(i int) IFuncDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncDeclContext)
}

func (s *TopDeclarationListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopDeclarationListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TopDeclarationListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AlphaCompilerListener); ok {
		listenerT.EnterTopDeclarationList(s)
	}
}

func (s *TopDeclarationListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AlphaCompilerListener); ok {
		listenerT.ExitTopDeclarationList(s)
	}
}

func (s *TopDeclarationListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AlphaCompilerVisitor:
		return t.VisitTopDeclarationList(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AlphaCompilerParser) TopDeclarationList() (localctx ITopDeclarationListContext) {
	localctx = NewTopDeclarationListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AlphaCompilerParserRULE_topDeclarationList)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&392) != 0 {
		p.SetState(89)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case AlphaCompilerParserT__2:
			{
				p.SetState(86)
				p.VariableDecl()
			}

		case AlphaCompilerParserT__6:
			{
				p.SetState(87)
				p.TypeDecl()
			}

		case AlphaCompilerParserT__7:
			{
				p.SetState(88)
				p.FuncDecl()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(93)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVariableDeclContext is an interface to support dynamic dispatch.
type IVariableDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SingleVarDecl() ISingleVarDeclContext
	InnerVarDecls() IInnerVarDeclsContext

	// IsVariableDeclContext differentiates from other interfaces.
	IsVariableDeclContext()
}

type VariableDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariableDeclContext() *VariableDeclContext {
	var p = new(VariableDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AlphaCompilerParserRULE_variableDecl
	return p
}

func InitEmptyVariableDeclContext(p *VariableDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = AlphaCompilerParserRULE_variableDecl
}

func (*VariableDeclContext) IsVariableDeclContext() {}

func NewVariableDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariableDeclContext {
	var p = new(VariableDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlphaCompilerParserRULE_variableDecl

	return p
}

func (s *VariableDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *VariableDeclContext) SingleVarDecl() ISingleVarDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISingleVarDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISingleVarDeclContext)
}

func (s *VariableDeclContext) InnerVarDecls() IInnerVarDeclsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInnerVarDeclsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInnerVarDeclsContext)
}

func (s *VariableDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VariableDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VariableDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AlphaCompilerListener); ok {
		listenerT.EnterVariableDecl(s)
	}
}

func (s *VariableDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AlphaCompilerListener); ok {
		listenerT.ExitVariableDecl(s)
	}
}

func (s *VariableDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AlphaCompilerVisitor:
		return t.VisitVariableDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AlphaCompilerParser) VariableDecl() (localctx IVariableDeclContext) {
	localctx = NewVariableDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AlphaCompilerParserRULE_variableDecl)
	p.SetState(108)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(94)
			p.Match(AlphaCompilerParserT__2)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(95)
			p.SingleVarDecl()
		}
		{
			p.SetState(96)
			p.Match(AlphaCompilerParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(98)
			p.Match(AlphaCompilerParserT__2)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(99)
			p.Match(AlphaCompilerParserT__3)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(100)
			p.InnerVarDecls()
		}
		{
			p.SetState(101)
			p.Match(AlphaCompilerParserT__4)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(102)
			p.Match(AlphaCompilerParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(104)
			p.Match(AlphaCompilerParserT__2)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(105)
			p.Match(AlphaCompilerParserT__3)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(106)
			p.Match(AlphaCompilerParserT__4)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(107)
			p.Match(AlphaCompilerParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}
